--- a/Bootstrap_examples/Typegrafika/typografy.html
+++ b/Bootstrap_examples/Typegrafika/typografy.html
@@ -53,11 +53,11 @@
                 </ul>
                 </Li>
 
-                
+
                 <li>Lorem ipsum dolor sit</li>
                 <li>Lorem ipsum dolor sit</li>
                 <li>Lorem ipsum dolor sit</li>
-                <li>Lorem ipsum dolor sit</li>
+                <li>Lorem ipsum dolor si</li>
                 <li>Lorem ipsum dolor sit</li>
             </ul>
 
